@@ -1,3 +1,8 @@
+2002-06-04  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* WaveBand.pm: Add Blank for UFTI and add SCUBA filters. Still a
+	problem with multiple wavelengths associated with a single filter.
+
 2002-05-28  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* WaveBand.pm: New CPAN release 0.04 (with README!)
